force-app/main/default/objects/Performance_Metric__c/Performance_Metric__c.object-meta.xml
<CustomObject>
    <description>Custom object for tracking application performance metrics and system resource usage</description>
    <label>Performance Metric</label>
    <nameField>
        <displayFormat>PERF-{00000}</displayFormat>
        <label>Performance Metric Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Metrics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>