force-app/main/default/objects/Performance_Metric__c/fields/Additional_Context__c.field-meta.xml
<CustomField>
    <fullName>Additional_Context__c</fullName>
    <description>Additional context information for the performance metric</description>
    <inlineHelpText>Additional context or details about the operation being measured.</inlineHelpText>
    <label>Additional Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>