force-app/main/default/objects/Performance_Metric__c/fields/CPU_Time__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time__c</fullName>
    <description>CPU time consumed at the time of measurement</description>
    <inlineHelpText>The CPU time consumed when this metric was recorded.</inlineHelpText>
    <label>CPU Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>