force-app/main/default/objects/Performance_Metric__c/fields/DML_Statements__c.field-meta.xml
<CustomField>
    <fullName>DML_Statements__c</fullName>
    <description>Number of DML statements consumed at the time of measurement</description>
    <inlineHelpText>The number of DML statements consumed when this metric was recorded.</inlineHelpText>
    <label>DML Statements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>