force-app/main/default/objects/Performance_Metric__c/fields/Execution_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Execution_Time_Ms__c</fullName>
    <description>Execution time in milliseconds</description>
    <inlineHelpText>The time taken to execute the operation in milliseconds.</inlineHelpText>
    <label>Execution Time (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>