force-app/main/default/objects/Performance_Metric__c/fields/Operation_Name__c.field-meta.xml
<CustomField>
    <fullName>Operation_Name__c</fullName>
    <description>Name of the operation being measured</description>
    <inlineHelpText>The name of the operation or method being performance monitored.</inlineHelpText>
    <label>Operation Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>