force-app/main/default/objects/Performance_Metric__c/fields/SOQL_Queries__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Queries__c</fullName>
    <description>Number of SOQL queries consumed at the time of measurement</description>
    <inlineHelpText>The number of SOQL queries consumed when this metric was recorded.</inlineHelpText>
    <label>SOQL Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>