force-app/main/default/objects/Performance_Metric__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date and time when the metric was recorded</description>
    <inlineHelpText>The exact date and time when the performance metric was recorded.</inlineHelpText>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>